--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@tabler/icons-react": "^3.34.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.18.1",
@@ -23,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "recharts": "^2.15.3",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
